# xmlsec

./: configure.ac
include/xmlsec/mbedtls/: Makefile.am  app.h  crypto.h  symbols.h  x509.h
src/mbedtls/: Makefile.am  app.c  crypto.c  globals.h  x509.c
